# improvedMFBR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  expIPBaselineVerification.cpp  expIPBoddetiVerification.cpp  expMFIPv1Verification.cpp  expMFIPv2Verification.cpp
data/VGGFace2/ArcFace-R100/: .gitignore
include/: basics.hpp  mfbr.hpp
src/: basics.cpp  mfbr.cpp
